--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "core-js": "^3.8.3",
     "qs": "^6.10.3",
     "vue": "^3.2.13",
-    "vue-router": "3.5.3",
+    "vue-router": "^4.0.13",
     "vuex": "3.6.2"
   },
   "devDependencies": {
