--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "qs": "^6.10.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13",
-    "vuex": "3.6.2"
+    "vuex": "4.0.0-alpha.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
