--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue-stripe/vue-stripe": "^4.4.2",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.3",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^16.0.0",
     "qs": "^6.10.3",
+    "stripe": "^8.214.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13",
     "vuex": "4.0.0-alpha.1"
